force-app/main/default/objects/HR_Action_Plan__c/HR_Action_Plan__c.object-meta.xml
<CustomObject>
    <label>HR Action Plan</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HR Action Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Action Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>