force-app/main/default/objects/HR_Action_Plan__c/fields/Client_Initiative_1__c.field-meta.xml
<CustomField>
    <fullName>Client_Initiative_1__c</fullName>
    <label>Client Initiative 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payroll and Online Services (ex. direct deposit, garnishments, Paychex Flex, HR Online, etc.)</fullName>
            </value>
            <value>
                <fullName>Employment Laws (ex. federal/state/local law reviews, labor posters, management seminars, etc.)</fullName>
            </value>
            <value>
                <fullName>Recruiting, Interviewing, and Selection (ex. job descriptions, employment application, interviewing, employee screening, etc.)</fullName>
            </value>
            <value>
                <fullName>New Employee Onboarding (ex. new hire orientation, documentation, checklist, etc.)</fullName>
            </value>
            <value>
                <fullName>Employee Files and Record Retention (ex. file audit, recordkeeping requirements, record retention guidelines, etc.)</fullName>
            </value>
            <value>
                <fullName>Total Rewards – Compensation &amp; Benefits (ex. compensation surveying, benefit offerings, COBRA, workers&apos; compensation, etc.)</fullName>
            </value>
            <value>
                <fullName>Training and Development (ex. management seminars, employee seminars, Paychex Learning Center, etc.)</fullName>
            </value>
            <value>
                <fullName>Employee Relations (ex. employee handbook, policy development, progressive discipline, etc.)</fullName>
            </value>
            <value>
                <fullName>Performance Management (ex. performance appraisals, self/peer reviews, merit increases, documentation, etc.)</fullName>
            </value>
            <value>
                <fullName>Workplace Safety (ex. OSHA requirements, safety trainings, emergency preparedness, personal protective equipment, etc.)</fullName>
            </value>
            <value>
                <fullName>Employee Separation (ex. unemployment, final pay, exit interviews, termination paperwork, etc.)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>