force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Action_26__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Action_26__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Action 26</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>