force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Date_17__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Date_17__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Date 17</label>
    <type>Date</type>
</CustomField>