force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Date_27__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Date_27__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Date 27</label>
    <type>Date</type>
</CustomField>