force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Need_19__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Need_19__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Need 19</label>
    <length>200</length>
    <type>Text</type>
</CustomField>