force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Participants_10__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Participants_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Participants 10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>