force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Recommendation_6__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Recommendation_6__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 1 Recommendation 6</label>
    <length>200</length>
    <type>Text</type>
</CustomField>