force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_1_Status_20__c.field-meta.xml
<CustomField>
    <fullName>Initiative_1_Status_20__c</fullName>
    <label>Initiative 1 Status 20</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>