force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_2_Date_10__c.field-meta.xml
<CustomField>
    <fullName>Initiative_2_Date_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 2 Date 10</label>
    <type>Date</type>
</CustomField>