force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_2_Need_11__c.field-meta.xml
<CustomField>
    <fullName>Initiative_2_Need_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiative 2 Need 11</label>
    <length>200</length>
    <type>Text</type>
</CustomField>