force-app/main/default/objects/HR_Action_Plan__c/fields/Initiative_2_Status_21__c.field-meta.xml
<CustomField>
    <fullName>Initiative_2_Status_21__c</fullName>
    <label>Initiative 2 Status 21</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>