force-app/main/default/objects/HR_Action_Plan__c/recordTypes/HR_Action_Plan_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>HR_Action_Plan_Record_Type</fullName>
    <active>true</active>
    <label>HR Action Plan Record Type</label>
</RecordType>